changes to LogIn java classes
changed package imports name to match our app

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    
+    <color name="red">#FE4A49</color>
+    <color name="yellow">#FED766</color>
+    <color name="blue">#009FB7</color>
 </resources>
