main activity change
manager or employee dash

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="red">#FE4A49</color>
     <color name="yellow">#FED766</color>
     <color name="blue">#009FB7</color>
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
+
 </resources>
