attempt at connecting activities

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
         android:layout_marginRight="72dp"
         android:background="@color/yellow"
         android:text="@string/employee_button"
+        android:onClick="employeeLogIn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3"
@@ -37,6 +38,7 @@
         android:layout_height="wrap_content"
         android:background="@color/yellow"
         android:text="@string/manager_button"
+        android:onClick="managerLogIn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button2"
         app:layout_constraintHorizontal_bias="0.503"
