--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -18,7 +18,7 @@
             android:id="@+id/dashRLayout"
             android:layout_width="match_parent"
             android:layout_height="125dp"
-            android:background="@color/blue"
+            android:background="@drawable/background"
             android:paddingTop="30dp"
             >
 
@@ -60,60 +60,36 @@
 
 
             <!--View Schedule Card-->
-<!--            <com.google.android.material.card.MaterialCardView-->
-<!--                android:id="@+id/schedule"-->
-<!--                android:layout_width="108dp"-->
-<!--                android:layout_height="108dp"-->
-<!--                android:layout_margin="50dp">-->
-
-<!--                <ImageView-->
-<!--                    android:id="@+id/scheduleIcon"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_margin="10dp"-->
-<!--                    android:contentDescription="@string/icon"-->
-<!--                    app:srcCompat="@drawable/scheduleview" />-->
-
-<!--                <TextView-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content" />-->
-<!--            </com.google.android.material.card.MaterialCardView>-->
+            <ImageView
+                android:id="@+id/scheduleIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:padding="45dp"
+                android:contentDescription="@string/icon"
+                app:srcCompat="@drawable/scheduleview" />
 
 
-<!--            &lt;!&ndash;Requests Card THIS WILL BE A FRAGMENT&ndash;&gt;-->
-<!--            <com.google.android.material.card.MaterialCardView-->
-<!--                android:id="@+id/requests"-->
-<!--                android:layout_width="108dp"-->
-<!--                android:layout_height="108dp"-->
-<!--                android:layout_margin="50dp">-->
+            <!--Requests Card THIS WILL BE A FRAGMENT-->
+            <ImageView
+                android:id="@+id/requestIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:padding="45dp"
+                android:contentDescription="@string/icon"
+                app:srcCompat="@drawable/request" />
 
-<!--                <ImageView-->
-<!--                    android:id="@+id/requestIcon"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_margin="10dp"-->
-<!--                    android:contentDescription="@string/icon"-->
-<!--                    app:srcCompat="@drawable/request" />-->
+            <!--Notification Card-->
+            <ImageView
+                android:id="@+id/notificationIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:padding="45dp"
+                android:contentDescription="@string/icon"
+                app:srcCompat="@drawable/notification" />
 
-<!--            </com.google.android.material.card.MaterialCardView>-->
-
-
-<!--            &lt;!&ndash;Notification Card&ndash;&gt;-->
-<!--            <com.google.android.material.card.MaterialCardView-->
-<!--                android:id="@+id/notification"-->
-<!--                android:layout_width="108dp"-->
-<!--                android:layout_height="108dp"-->
-<!--                android:layout_margin="50dp">-->
-
-<!--                <ImageView-->
-<!--                    android:id="@+id/notificationIcon"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_margin="10dp"-->
-<!--                    android:contentDescription="@string/icon"-->
-<!--                    app:srcCompat="@drawable/notification" />-->
-
-<!--            </com.google.android.material.card.MaterialCardView>-->
 
         </androidx.gridlayout.widget.GridLayout>
     </LinearLayout>
