--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <ImageView
-        android:id="@+id/emplyeeicon"
+        android:id="@+id/employeeicon"
         android:layout_width="91dp"
         android:layout_height="97dp"
         android:layout_marginTop="228dp"
@@ -28,7 +28,7 @@
         android:text="@string/employee_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emplyeeicon"
+        app:layout_constraintTop_toBottomOf="@+id/employeeicon"
         app:layout_constraintVertical_bias="0.097" />
 
     <Button
@@ -50,7 +50,7 @@
         android:layout_height="97dp"
         android:layout_marginTop="228dp"
         android:contentDescription="@string/icon"
-        app:layout_constraintEnd_toStartOf="@+id/emplyeeicon"
+        app:layout_constraintEnd_toStartOf="@+id/employeeicon"
         app:layout_constraintHorizontal_bias="0.519"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
